Added modifier for numeric results

--- a/src/main/resources/net/unknowndomain/alea/systems/fitd/RpgSystemBundle_en.properties
+++ b/src/main/resources/net/unknowndomain/alea/systems/fitd/RpgSystemBundle_en.properties
@@ -16,6 +16,7 @@ basic.options.help=Print the command help
 basic.options.verbose=Enable verbose output
 
 fitd.options.dice=Number of dice to roll (0-6).
+fitd.options.numeric=Return the numeric result (used for stress-related rolls).
 
 fitd.results.successLevel.0=Failure
 fitd.results.successLevel.1=Partial Success
@@ -23,3 +24,4 @@ fitd.results.successLevel.2=Full Success
 fitd.results.successLevel.3=Critical Success
 
 fitd.results.diceResults=Results: 
+fitd.results.numRes=Result: %d
