--- a/src/main/resources/net/unknowndomain/alea/systems/fitd/RpgSystemBundle_it.properties
+++ b/src/main/resources/net/unknowndomain/alea/systems/fitd/RpgSystemBundle_it.properties
@@ -23,6 +23,7 @@ usage.customSynopsis.0   = fitd -d <numberOfDice>
 usage.optionListHeading  = Opzioni:%n
 
 fitd.options.dice=Numero di dadi da tirare (0-6).
+fitd.options.numeric=Ritorna un risultato numerico (per i tiri su stress).
 
 fitd.results.successLevel.0=Fallimento
 fitd.results.successLevel.1=Successo Parziale
@@ -30,3 +31,4 @@ fitd.results.successLevel.2=Successo Pieno
 fitd.results.successLevel.3=Successo Critico
 
 fitd.results.diceResults=Risultati: 
+fitd.results.numRes=Risultato: %d
